--- a/common/pom.xml
+++ b/common/pom.xml
@@ -82,6 +82,17 @@
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
+            <!-- Temporarily excluding old version of transitive dependency to fix security bug in underlying library. Remove when dependency is upgraded. -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-compress</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
