--- a/avro-kafkaconnect-converter/pom.xml
+++ b/avro-kafkaconnect-converter/pom.xml
@@ -130,6 +130,7 @@
             <plugin>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro-maven-plugin</artifactId>
+		<version>${avro.version}</version>
                 <executions>
                     <execution>
                         <phase>generate-test-sources</phase>
