--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <module>examples</module>
         <module>integration-tests</module>
         <module>jsonschema-kafkaconnect-converter</module>
+        <module>protobuf-kafkaconnect-converter</module>
     </modules>
 
     <properties>
