--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
 
     <properties>
         <glue.schema.registry.groupId>software.amazon.glue</glue.schema.registry.groupId>
-        <aws.sdk.v2.version>2.17.113</aws.sdk.v2.version>
-        <aws.sdk.v1.version>1.11.642</aws.sdk.v1.version>
+        <aws.sdk.v2.version>2.17.122</aws.sdk.v2.version>
+        <aws.sdk.v1.version>1.12.151</aws.sdk.v1.version>
         <kafka.scala.version>2.12</kafka.scala.version>
         <kafka.version>2.8.1</kafka.version>
         <avro.version>1.10.2</avro.version>
@@ -87,6 +87,12 @@
         <commons.compress.version>1.21</commons.compress.version>
         <commons.lang.version>3.8.1</commons.lang.version>
         <jackson.version>2.12.2</jackson.version>
+        <!-- Protobuf -->
+        <proto-plugin.version>0.6.1</proto-plugin.version>
+        <protobuf.version>3.19.1</protobuf.version>
+        <square-wireschema.version>3.7.1</square-wireschema.version>
+        <apicurio-registry.version>2.1.3.Final</apicurio-registry.version>
+
         <slf4j.version>1.7.30</slf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <jupiter.version>5.6.2</jupiter.version>
@@ -103,6 +109,8 @@
         <commons.lang3.version>3.8.1</commons.lang3.version>
         <commons.cli.version>1.2</commons.cli.version>
         <awaitility.version>3.0.0</awaitility.version>
+        <localstack.utils>0.2.11</localstack.utils>
+        <protobuf.java.version>3.19.1</protobuf.java.version>
         <localstack.utils>0.2.11</localstack.utils>
     </properties>
 
@@ -336,6 +344,12 @@
                 <version>${hamcrest.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf.java.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -359,6 +373,7 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                    <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
