--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
         <slf4j.version>1.7.30</slf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <jupiter.version>5.6.2</jupiter.version>
-        <mockito.version>3.3.3</mockito.version>
+        <mockito.version>3.6.28</mockito.version>
         <lombok.version>1.18.20</lombok.version>
         <lombok.utils.version>1.18.12</lombok.utils.version>
         <hamcrest.version>1.1</hamcrest.version>
@@ -319,6 +319,12 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-inline</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
