--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -106,6 +106,25 @@
             <artifactId>apicurio-registry-protobuf-schema-utilities</artifactId>
             <version>${apicurio-registry.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.api.grpc/proto-google-common-protos -->
+        <dependency>
+            <groupId>com.google.api.grpc</groupId>
+            <artifactId>proto-google-common-protos</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.jimfs</groupId>
+            <artifactId>jimfs</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <!-- Used for Proto assertions in tests -->
+        <dependency>
+            <groupId>com.google.truth.extensions</groupId>
+            <artifactId>truth-proto-extension</artifactId>
+            <scope>test</scope>
+            <version>1.1.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
@@ -169,6 +188,7 @@
                         <id>gencode</id>
                         <phase>generate-sources</phase>
                         <goals>
+                            <goal>compile</goal>
                             <goal>test-compile</goal>
                         </goals>
                         <configuration>
