--- a/avro-flink-serde/pom.xml
+++ b/avro-flink-serde/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>software.amazon.glue</groupId>
-    <artifactId>schema-registry-flink-serde</artifactId>
+    <artifactId>schema-registry-flink-serde_2.12</artifactId>
     <version>1.1.17</version>
     <name>AWS Glue Schema Registry Flink Avro Serialization Deserialization Schema</name>
     <description>The AWS Glue Schema Registry Library for Apache Flink enables Java developers to easily integrate
@@ -65,7 +65,7 @@
     <dependencies>
         <dependency>
             <groupId>software.amazon.glue</groupId>
-            <artifactId>schema-registry-serde</artifactId>
+            <artifactId>schema-registry-serde_2.12</artifactId>
             <version>1.1.17</version>
         </dependency>
         <dependency>
@@ -77,7 +77,7 @@
 
         <dependency>
             <groupId>software.amazon.glue</groupId>
-            <artifactId>schema-registry-serde</artifactId>
+            <artifactId>schema-registry-serde_2.12</artifactId>
             <version>1.0.2</version>
             <classifier>tests</classifier>
             <type>test-jar</type>
