--- a/avro-kafkaconnect-converter/pom.xml
+++ b/avro-kafkaconnect-converter/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>${parent.groupId}</groupId>
-    <artifactId>schema-registry-kafkaconnect-converter</artifactId>
+    <artifactId>schema-registry-kafkaconnect-converter_2.12</artifactId>
     <version>${parent.version}</version>
     <name>AWS Glue Schema Registry Kafka Connect AVRO Converter</name>
     <description>The AWS Glue Schema Registry Kafka Connect Converter enables Java developers to easily integrate
@@ -31,7 +31,7 @@
 
     <parent>
         <groupId>software.amazon.glue</groupId>
-        <artifactId>schema-registry-parent</artifactId>
+        <artifactId>schema-registry-parent_2.12</artifactId>
         <version>1.1.17</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -62,7 +62,7 @@
     <dependencies>
         <dependency>
             <groupId>${parent.groupId}</groupId>
-            <artifactId>schema-registry-serde</artifactId>
+            <artifactId>schema-registry-serde_2.12</artifactId>
             <version>${parent.version}</version>
         </dependency>
         <dependency>
