--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -21,13 +21,13 @@
 
     <parent>
         <groupId>software.amazon.glue</groupId>
-        <artifactId>schema-registry-parent</artifactId>
+        <artifactId>schema-registry-parent_2.12</artifactId>
         <version>1.1.17</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>${parent.groupId}</groupId>
-    <artifactId>schema-registry-build-tools</artifactId>
+    <artifactId>schema-registry-build-tools_2.12</artifactId>
     <version>${parent.version}</version>
     <name>AWS Glue Schema Registry Build Tools</name>
     <description>The AWS Glue Schema Registry build tools helps run code coverage for AWS Glue Schema Registry Library
