--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>software.amazon.glue</groupId>
-    <artifactId>schema-registry-parent</artifactId>
+    <artifactId>schema-registry-parent_2.12</artifactId>
     <version>1.1.17</version>
     <packaging>pom</packaging>
     <name>AWS Glue Schema Registry Library</name>
@@ -82,7 +82,7 @@
         <glue.schema.registry.groupId>software.amazon.glue</glue.schema.registry.groupId>
         <aws.sdk.v2.version>2.18.4</aws.sdk.v2.version>
         <aws.sdk.v1.version>1.12.151</aws.sdk.v1.version>
-        <kafka.scala.version>2.12</kafka.scala.version>
+        <scala.binary.version>2.12</scala.binary.version>
         <kafka.version>3.6.0</kafka.version>
         <avro.version>1.11.3</avro.version>
         <mbknor.jsonschema.converter.version>1.0.39</mbknor.jsonschema.converter.version>
@@ -141,7 +141,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.kafka</groupId>
-                <artifactId>kafka_${kafka.scala.version}</artifactId>
+                <artifactId>kafka_${scala.binary.version}</artifactId>
                 <version>${kafka.version}</version>
             </dependency>
             <dependency>
@@ -238,7 +238,7 @@
             </dependency>
             <dependency>
                 <groupId>com.kjetland</groupId>
-                <artifactId>mbknor-jackson-jsonschema_${kafka.scala.version}</artifactId>
+                <artifactId>mbknor-jackson-jsonschema_${scala.binary.version}</artifactId>
                 <version>${mbknor.jsonschema.converter.version}</version>
             </dependency>
             <!-- Temporarily adding dependency on a transitive dependency to fix security bug in underlying library. Remove when dependency is upgraded. -->
@@ -499,6 +499,18 @@
         </plugins>
     </build>
     <profiles>
+        <profile>
+            <id>scala-2.12</id>
+            <properties>
+                <scala.binary.version>2.12</scala.binary.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>scala-2.13</id>
+            <properties>
+                <scala.binary.version>2.13</scala.binary.version>
+            </properties>
+        </profile>
         <profile>
             <id>publishing</id>
             <build>
