--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>${parent.groupId}</groupId>
-    <artifactId>schema-registry-serde</artifactId>
+    <artifactId>schema-registry-serde_2.12</artifactId>
     <name>AWS Glue Schema Registry Serializer Deserializer</name>
     <description>The AWS Glue Schema Registry Serializer/Deserializer enables Java developers to easily integrate
         their Apache Kafka and AWS Kinesis applications with AWS Glue Schema Registry
@@ -31,7 +31,7 @@
 
     <parent>
         <groupId>software.amazon.glue</groupId>
-        <artifactId>schema-registry-parent</artifactId>
+        <artifactId>schema-registry-parent_2.12</artifactId>
         <version>1.1.17</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -72,7 +72,7 @@
         </dependency>
         <dependency>
             <groupId>${parent.groupId}</groupId>
-            <artifactId>schema-registry-common</artifactId>
+            <artifactId>schema-registry-common_2.12</artifactId>
             <version>${parent.version}</version>
         </dependency>
         <dependency>
@@ -89,7 +89,7 @@
         </dependency>
         <dependency>
             <groupId>com.kjetland</groupId>
-            <artifactId>mbknor-jackson-jsonschema_2.12</artifactId>
+            <artifactId>mbknor-jackson-jsonschema_${scala.binary.version}</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>io.github.classgraph</groupId>
